--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,16 @@
+body {
+    cursor: url("./../images/cursor1.png"), auto !important;
+}
+
 .App {
     max-width: 100vw;
     overflow-x: hidden;
+    background: white;
+}
+
+.watermark {
+    background: url("./../images/Background-small.png");
+    background-repeat: repeat !important;
 }
 
 .centered {
@@ -10,11 +20,20 @@
 }
 
 .contentWrapper {
+    // margin-top: -128px;
     min-height: 95vh;
 }
 
 .bold {
     font-weight: bold;
+}
+
+.chewy {
+    @font-face {
+        font-family: chewy;
+        src: url("Chewy.ttf");
+    }
+    font-family: chewy;
 }
 
 .semi-bold {
@@ -23,15 +42,19 @@
 
 .checkout-btn {
     margin-top: 16px;
-    width: 45%;
-    max-width: 380px;
-    background-color: #0a0a0a;
+    width: 35%;
+    max-width: 350px;
+    background-color: #e33795;
     font-size: 13px;
     font-weight: 700;
     text-transform: uppercase;
 
     &:hover {
-        background-color: #0a0a0a;
+        background-color: #9549c1;
+    }
+
+    &:focus {
+        background-color: #9549c1;
     }
 }
 
